[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/button.png" type="Texture" id=1]
[ext_resource path="res://src/objects/PressureButton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="PressureButton" type="Area2D"]
collision_layer = 0
collision_mask = 7
script = ExtResource( 2 )

[node name="button" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_PressureButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PressureButton_body_exited"]
